CLEANFILES = cppcomplete.tags tags

SUBDIRS = cache conf

INCLUDES = -I$(top_srcdir)/src

noinst_LIBRARIES = libportage.a

libportage_a_SOURCES = basicversion.cc basicversion.h \
					   mask.cc mask.h \
					   version.h \
					   package.cc package.h \
					   keywords.cc keywords.h \
					   vardbpkg.cc vardbpkg.h \
					   packagetree.cc packagetree.h
